# codehist

./: .gitignore  README.md  README_old.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
codehist/: __init__.py  __main__.py  cli.py  models.py
codehist/exporters/: __init__.py  chunked_json.py  json.py  markdown.py
codehist/parsers/: __init__.py  copilot.py
docs/: getting-started.md
tests/: test_basic.py
